# docs/rest/swagger/swagger.yaml
@@ -6,25 +6,6 @@ info:
 servers:
   - url: http://localhost:8080
 paths:
-  /api/auth/register:
-    post:
-      summary: Register a new user
-      tags:
-        - Auth
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                login:
-                  type: string
-                password:
-                  type: string
-      responses:
-        '201':
-          description: Created
   /api/auth/login:
     post:
       summary: Login
